--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql-cli": "^3.0.14",
     "graphql-import": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.9",
     "prisma": "^1.34.10",
     "prisma-binding": "^2.3.16",
     "prisma-client-lib": "^1.34.10"
