Cleaning up old tech stack

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ lerna-debug.log*
 
 .DS_Store
 
+# Google App Engine
+app.yml
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
