--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node -r dotenv/config src/index.js",
-    "get-schema": "graphql get-schema -p prisma"
   },
   "engines": {
     "node": "*"
@@ -16,7 +15,6 @@
     "@babel/helper-plugin-utils": "^7.8.3",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
-    "@prisma/cli": "^2.0.0-preview025",
     "apollo-server": "^2.11.0",
     "babel-plugin-graphql-tag": "^2.5.0",
     "bcryptjs": "^2.4.3",
@@ -26,10 +24,7 @@
     "graphql-cli": "^3.0.14",
     "graphql-import": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.9",
-    "prisma": "^1.34.10",
-    "prisma-binding": "^2.3.16",
-    "prisma-client-lib": "^1.34.10"
+    "mongoose": "^5.9.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4"
