--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
+    "expo-server-sdk": "^3.5.0",
     "global": "^4.4.0",
     "graphql": "^15.0.0",
     "jest": "^25.3.0",
