--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,11 @@
 runtime: nodejs
 env: flex
+env_variables:
+  GCLOUD_STORAGE_BUCKET: shared_assets
 resources:
   cpu: 1
   memory_gb: 0.5
-  disk_size_gb: 10 
+  disk_size_gb: 10
 automatic_scaling:
   min_num_instances: 1
   max_num_instances: 20
