--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
+    "@google-cloud/storage": "^5.1.1",
     "apollo-boost": "^0.4.7",
     "apollo-server": "^2.11.0",
     "babel-plugin-graphql-tag": "^2.5.0",
@@ -33,8 +34,10 @@
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "expo-server-sdk": "^3.5.0",
+    "express": "^4.17.1",
     "global": "^4.4.0",
     "graphql": "^15.0.0",
+    "graphql-upload": "^11.0.0",
     "jest": "^25.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
@@ -45,5 +48,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4"
+  },
+  "resolutions": {
+    "graphql-upload": "11.0.0"
   }
 }
