--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
     "node": "^13.13.0",
+    "node-cron": "^2.0.3",
     "regenerator-runtime": "^0.13.5",
     "unfetch": "^4.1.0",
     "validator": "^13.0.0"
