--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "graphql-upload": "^11.0.0",
     "jest": "^25.3.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.9",
     "node": "^13.13.0",
