--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
-    "@google-cloud/storage": "^5.1.1",
+    "@google-cloud/storage": "^5.18.2",
     "apollo-boost": "^0.4.7",
-    "apollo-server": "^2.11.0",
+    "apollo-server-express": "^3.6.3",
     "babel-plugin-graphql-tag": "^2.5.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
     "expo-server-sdk": "^3.5.0",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "global": "^4.4.0",
     "graphql": "^15.0.0",
     "graphql-type-json": "^0.3.2",
-    "graphql-upload": "^11.0.0",
+    "graphql-upload": "^13.0.0",
     "jest": "^25.3.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0",
@@ -49,8 +49,5 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4"
-  },
-  "resolutions": {
-    "graphql-upload": "11.0.0"
   }
 }
