--- a/package.json
+++ b/package.json
@@ -16,38 +16,34 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
-    "@babel/core": "^7.8.7",
-    "@babel/helper-plugin-utils": "^7.8.3",
-    "@babel/node": "^7.8.7",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/register": "^7.9.0",
-    "@google-cloud/storage": "^5.18.2",
-    "apollo-boost": "^0.4.7",
-    "apollo-server-express": "^3.6.3",
-    "babel-plugin-graphql-tag": "^2.5.0",
+    "@babel/helper-plugin-utils": "^7.19.0",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/register": "^7.18.9",
+    "@google-cloud/storage": "^6.5.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-server-express": "^3.10.2",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.2",
     "email-validator": "^2.0.4",
-    "expo-server-sdk": "^3.5.0",
-    "express": "^4.17.3",
+    "expo-server-sdk": "^3.6.0",
+    "express": "^4.18.1",
     "global": "^4.4.0",
-    "graphql": "^15.0.0",
+    "graphql": "^16.6.0",
     "graphql-type-json": "^0.3.2",
-    "graphql-upload": "^13.0.0",
-    "jest": "^25.3.0",
+    "jest": "^29.0.3",
     "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.0.0",
-    "moment": "^2.27.0",
-    "mongoose": "^5.12.10",
-    "node": "^14.0.0",
-    "node-cron": "^2.0.3",
-    "regenerator-runtime": "^0.13.5",
-    "unfetch": "^4.1.0",
-    "validator": "^13.0.0"
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "mongoose": "^6.6.1",
+    "node": "^17.9.0",
+    "node-cron": "^3.0.2",
+    "unfetch": "^4.2.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4"
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/node": "^7.19.1",
+    "babel-plugin-graphql-tag": "^3.3.0"
   }
 }
