--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.19.1",
     "@babel/node": "^7.19.1",
-    "babel-plugin-graphql-tag": "^3.3.0"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.2",
+    "babel-plugin-graphql-tag": "^3.3.0",
+    "eslint": "^8.25.0",
+    "typescript": "^4.8.4"
   }
 }
