--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": ["graphql-tag"],
-  "env": {
-    "debug": {
-      "sourceMap": "inline",
-      "retainLines": true
-    }
-  }
+	"presets": ["@babel/preset-env", "@babel/preset-typescript"],
+	"plugins": ["graphql-tag"],
+	"env": {
+		"debug": {
+			"sourceMap": "inline",
+			"retainLines": true
+		}
+	}
 }
