--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Testing a GraphQL server on GCP",
 	"main": "index.js",
 	"scripts": {
-		"start": "babel-node --extensions \".ts\" -r dotenv/config src/index.ts",
+		"start": "babel-node --extensions \".ts\" -r dotenv/config src/index",
 		"test": "jest --watchAll"
 	},
 	"jest": {
@@ -36,7 +36,7 @@
 		"jwt-decode": "^3.1.2",
 		"moment": "^2.29.4",
 		"mongoose": "^6.6.1",
-		"node": "^17.9.0",
+		"node": "^16.18.0",
 		"node-cron": "^3.0.2",
 		"ts-node": "^10.9.1",
 		"unfetch": "^4.2.0",
@@ -48,8 +48,11 @@
 		"@babel/node": "^7.19.1",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.14",
+		"@types/graphql": "^14.5.0",
 		"@types/jest": "^29.2.0",
 		"@types/node": "^18.11.2",
+		"@types/node-cron": "^3.0.4",
+		"apollo": "^2.34.0",
 		"babel-plugin-graphql-tag": "^3.3.0",
 		"eslint": "^8.25.0",
 		"typescript": "^4.8.4"
