--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Testing a GraphQL server on GCP",
 	"main": "index.js",
 	"scripts": {
-		"start": "babel-node --extensions \".ts\" -r dotenv/config src/index",
+		"start": "ts-node -r dotenv/config src/index",
 		"test": "jest --watchAll"
 	},
 	"jest": {
