--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@babel/preset-typescript": "^7.18.6",
 		"@babel/register": "^7.18.9",
 		"@google-cloud/storage": "^6.5.0",
+		"@types/validator": "^13.7.9",
 		"apollo-boost": "^0.4.9",
 		"apollo-server-express": "^3.10.2",
 		"bcryptjs": "^2.4.3",
