--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
 		"@babel/preset-typescript": "^7.18.6",
 		"@babel/register": "^7.18.9",
 		"@google-cloud/storage": "^6.5.0",
-		"@types/mongoose": "^5.11.97",
-		"@types/validator": "^13.7.9",
 		"apollo-boost": "^0.4.9",
 		"apollo-server-express": "^3.10.2",
 		"bcryptjs": "^2.4.3",
@@ -51,8 +49,11 @@
 		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.14",
 		"@types/jest": "^29.2.0",
+		"@types/jsonwebtoken": "^8.5.9",
+		"@types/mongoose": "^5.11.97",
 		"@types/node": "^18.11.2",
 		"@types/node-cron": "^3.0.4",
+		"@types/validator": "^13.7.10",
 		"apollo": "^2.34.0",
 		"babel-plugin-graphql-tag": "^3.3.0",
 		"eslint": "^8.25.0",
