--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"mongoose": "^6.6.1",
 		"node": "^16.18.0",
 		"node-cron": "^3.0.2",
+		"ts-mongoose": "^0.0.24",
 		"ts-node": "^10.9.1",
 		"unfetch": "^4.2.0",
 		"validator": "^13.7.0"
