--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.19.1",
     "@babel/register": "^7.18.9",
     "@google-cloud/storage": "^6.5.0",
+    "@typegoose/typegoose": "^9.12.1",
     "apollo-boost": "^0.4.9",
     "apollo-server-express": "^3.10.2",
     "bcryptjs": "^2.4.3",
