--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"experimentalDecorators": true,
-		// "target": "ES6",
+		"target": "ES6",
 		// "module": "CommonJS",
 		"esModuleInterop": true,
 		"allowJs": true,
