--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "graphql-basics",
-  "version": "1.0.0",
-  "description": "Testing a GraphQL server on GCP",
-  "main": "index.js",
-  "scripts": {
-    "start": "babel-node -r dotenv/config src/index.js",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "globalSetup": "./tests/jest/globalSetup.js",
-    "globalTeardown": "./tests/jest/globalTeardown.js",
-    "setupFiles": [
-      "dotenv/config"
-    ]
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@babel/helper-plugin-utils": "^7.19.0",
-    "@babel/preset-env": "^7.19.1",
-    "@babel/register": "^7.18.9",
-    "@google-cloud/storage": "^6.5.0",
-    "@typegoose/typegoose": "^9.12.1",
-    "apollo-boost": "^0.4.9",
-    "apollo-server-express": "^3.10.2",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.2",
-    "email-validator": "^2.0.4",
-    "expo-server-sdk": "^3.6.0",
-    "express": "^4.18.1",
-    "global": "^4.4.0",
-    "graphql": "^16.6.0",
-    "graphql-type-json": "^0.3.2",
-    "jest": "^29.0.3",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.1.2",
-    "moment": "^2.29.4",
-    "mongoose": "^6.6.1",
-    "node": "^17.9.0",
-    "node-cron": "^3.0.2",
-    "unfetch": "^4.2.0",
-    "validator": "^13.7.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.19.1",
-    "@babel/node": "^7.19.1",
-    "@types/bcrypt": "^5.0.0",
-    "@types/validator": "^13.7.10",
-    "babel-plugin-graphql-tag": "^3.3.0"
-  }
+	"name": "graphql-basics",
+	"version": "1.0.0",
+	"description": "Testing a GraphQL server on GCP",
+	"main": "index.js",
+	"scripts": {
+		"start": "ts-node -r dotenv/config src/index",
+		"test": "jest --watchAll"
+	},
+	"jest": {
+		"globalSetup": "./tests/jest/globalSetup.js",
+		"globalTeardown": "./tests/jest/globalTeardown.js",
+		"setupFiles": [
+			"dotenv/config"
+		]
+	},
+	"license": "MIT",
+	"dependencies": {
+		"@babel/helper-plugin-utils": "^7.19.0",
+		"@babel/preset-env": "^7.19.1",
+		"@babel/register": "^7.18.9",
+		"@google-cloud/storage": "^6.5.0",
+		"@typegoose/typegoose": "^9.12.1",
+		"apollo-boost": "^0.4.9",
+		"apollo-server-express": "^3.10.2",
+		"bcryptjs": "^2.4.3",
+		"dotenv": "^16.0.2",
+		"email-validator": "^2.0.4",
+		"expo-server-sdk": "^3.6.0",
+		"express": "^4.18.1",
+		"global": "^4.4.0",
+		"graphql": "^16.6.0",
+		"graphql-type-json": "^0.3.2",
+		"jest": "^29.0.3",
+		"jsonwebtoken": "^8.5.1",
+		"jwt-decode": "^3.1.2",
+		"moment": "^2.29.4",
+		"mongoose": "^6.6.1",
+		"node": "^17.9.0",
+		"node-cron": "^3.0.2",
+		"type-graphql": "^1.1.1",
+		"unfetch": "^4.2.0",
+		"validator": "^13.7.0"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.18.10",
+		"@babel/core": "^7.19.1",
+		"@babel/node": "^7.19.1",
+		"@types/bcrypt": "^5.0.0",
+		"@types/jsonwebtoken": "^8.5.9",
+		"@types/validator": "^13.7.10",
+		"babel-plugin-graphql-tag": "^3.3.0"
+	}
 }
