--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@typegoose/typegoose": "^9.12.1",
 		"apollo-boost": "^0.4.9",
 		"apollo-server-express": "^3.10.2",
+		"bcrypt": "^5.1.0",
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.0.2",
 		"email-validator": "^2.0.4",
@@ -38,7 +39,7 @@
 		"mongoose": "^6.6.1",
 		"node": "^17.9.0",
 		"node-cron": "^3.0.2",
-		"type-graphql": "^1.1.1",
+		"typescript": "^4.8.4",
 		"unfetch": "^4.2.0",
 		"validator": "^13.7.0"
 	},
