--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
 		"@babel/preset-typescript": "^7.18.6",
 		"@babel/register": "^7.18.9",
 		"@google-cloud/storage": "^6.5.0",
+		"@typegoose/typegoose": "^9.12.1",
 		"apollo-boost": "^0.4.9",
 		"apollo-server-express": "^3.10.2",
+		"bcrypt": "^5.1.0",
 		"bcryptjs": "^2.4.3",
+		"class-validator": "^0.13.2",
 		"dotenv": "^16.0.2",
 		"email-validator": "^2.0.4",
 		"expo-server-sdk": "^3.6.0",
@@ -40,6 +43,7 @@
 		"node-cron": "^3.0.2",
 		"ts-mongoose": "^0.0.24",
 		"ts-node": "^10.9.1",
+		"type-graphql": "^1.1.1",
 		"typescript": "^4.8.4",
 		"unfetch": "^4.2.0",
 		"validator": "^13.7.0"
@@ -48,6 +52,7 @@
 		"@babel/cli": "^7.18.10",
 		"@babel/core": "^7.19.1",
 		"@babel/node": "^7.19.1",
+		"@types/bcrypt": "^5.0.0",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.14",
 		"@types/jest": "^29.2.0",
@@ -59,7 +64,6 @@
 		"apollo": "^2.34.0",
 		"babel-plugin-graphql-tag": "^3.3.0",
 		"eslint": "^8.25.0",
-		"typescript": "^4.8.4",
-		"@types/bcrypt": "^5.0.0"
+		"typescript": "^4.8.4"
 	}
 }
