--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"jwt-decode": "^3.1.2",
 		"moment": "^2.29.4",
 		"mongoose": "^6.6.1",
+		"multer": "^1.4.5-lts.1",
 		"node": "^17.9.0",
 		"node-cron": "^3.0.2",
 		"ts-node": "^10.9.1",
@@ -63,6 +64,7 @@
 		"@types/jest": "^29.2.3",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/mongoose": "^5.11.97",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^18.11.2",
 		"@types/node-cron": "^3.0.4",
 		"@types/validator": "^13.7.10",
