--- a/package.json
+++ b/package.json
@@ -1,78 +1,81 @@
 {
-	"name": "graphql-basics",
-	"version": "1.0.0",
-	"description": "Testing a GraphQL server on GCP",
-	"main": "index.js",
-	"scripts": {
-		"start": "ts-node -r dotenv/config src/index",
-		"test": "jest --runInBand"
-	},
-	"jest": {
-		"testEnvironment": "node",
-		"transform": {
-			"^.+\\.js?$": "babel-jest",
-			"^.+\\.ts?$": "ts-jest"
-		}
-	},
-	"license": "MIT",
-	"dependencies": {
-		"@apollo/server": "^4.2.2",
-		"@babel/helper-plugin-utils": "^7.19.0",
-		"@babel/preset-env": "^7.19.1",
-		"@babel/preset-typescript": "^7.18.6",
-		"@babel/register": "^7.18.9",
-		"@google-cloud/storage": "^6.5.0",
-		"@sendgrid/mail": "^7.7.0",
-		"@typegoose/typegoose": "^9.12.1",
-		"@types/handlebars": "^4.1.0",
-		"bcrypt": "^5.1.0",
-		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.20.1",
-		"class-validator": "^0.13.2",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.2",
-		"email-validator": "^2.0.4",
-		"expo-server-sdk": "^3.6.0",
-		"express": "^4.18.1",
-		"fs-capacitor": "^8.0.0",
-		"global": "^4.4.0",
-		"graphql": "^16.6.0",
-		"graphql-tag": "^2.12.6",
-		"graphql-type-json": "^0.3.2",
-		"handlebars": "^4.7.7",
-		"jest": "^29.0.3",
-		"jsonwebtoken": "^8.5.1",
-		"jwt-decode": "^3.1.2",
-		"moment": "^2.29.4",
-		"mongoose": "^6.6.1",
-		"multer": "^1.4.5-lts.1",
-		"node": "^17.9.0",
-		"node-cron": "^3.0.2",
-		"ts-node": "^10.9.1",
-		"type-graphql": "^2.0.0-beta.1",
-		"unfetch": "^4.2.0",
-		"validator": "^13.7.0"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.18.10",
-		"@babel/core": "^7.19.1",
-		"@babel/node": "^7.19.1",
-		"@types/bcrypt": "^5.0.0",
-		"@types/bcryptjs": "^2.4.2",
-		"@types/cors": "^2.8.13",
-		"@types/express": "^4.17.14",
-		"@types/jest": "^29.2.3",
-		"@types/jsonwebtoken": "^8.5.9",
-		"@types/mongoose": "^5.11.97",
-		"@types/multer": "^1.4.7",
-		"@types/node": "^18.11.2",
-		"@types/node-cron": "^3.0.4",
-		"@types/validator": "^13.7.10",
-		"apollo": "^2.34.0",
-		"babel-jest": "^29.3.1",
-		"babel-plugin-graphql-tag": "^3.3.0",
-		"eslint": "^8.25.0",
-		"ts-jest": "^29.0.3",
-		"typescript": "^4.9.3"
-	}
+  "name": "graphql-basics",
+  "version": "1.0.0",
+  "description": "Testing a GraphQL server on GCP",
+  "main": "index.js",
+  "scripts": {
+    "start": "ts-node -r dotenv/config src/index",
+    "test": "jest --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.js?$": "babel-jest",
+      "^.+\\.ts?$": "ts-jest"
+    }
+  },
+  "license": "MIT",
+  "dependencies": {
+    "@apollo/server": "^4.2.2",
+    "@babel/helper-plugin-utils": "^7.19.0",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/register": "^7.18.9",
+    "@google-cloud/storage": "^6.5.0",
+    "@sendgrid/mail": "^7.7.0",
+    "@typegoose/typegoose": "^9.12.1",
+    "@types/handlebars": "^4.1.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "email-validator": "^2.0.4",
+    "expo-server-sdk": "^3.6.0",
+    "express": "^4.18.1",
+    "fs-capacitor": "^8.0.0",
+    "global": "^4.4.0",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-type-json": "^0.3.2",
+    "handlebars": "^4.7.7",
+    "jest": "^29.0.3",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "mongoose": "^6.6.1",
+    "multer": "^1.4.5-lts.1",
+    "node": "^17.9.0",
+    "node-cron": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "type-graphql": "^2.0.0-beta.1",
+    "unfetch": "^4.2.0",
+    "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/node": "^7.19.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^18.11.2",
+    "@types/node-cron": "^3.0.4",
+    "@types/validator": "^13.7.10",
+    "apollo": "^2.34.0",
+    "babel-jest": "^29.3.1",
+    "babel-plugin-graphql-tag": "^3.3.0",
+    "eslint": "^8.25.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
+  },
+  "prettier": {
+    "arrowParens": "avoid"
+  }
 }
